Fix test overflow in action element

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -57,6 +57,9 @@
 
   a {
     margin-right: $whitespace;
+    max-width: 50%;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 
